Fix double feature, improve CSS styling by switching the logo and blockquote spacing. Update to the Readme with new screenshots.

--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -79,7 +79,7 @@ p.mb-0.message {
 
 .logo {
   width: 100%;
-  margin: 0 0 -30px 0;
+  margin: -10px 0 -15px 0;
 }
 
 @charset "UTF-8";
